--- a/actuator_admin/02-admin/src/main/resources/application.properties
+++ b/actuator_admin/02-admin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
-spring.security.user.name=xushu
-spring.security.user.password=xushu
+spring.security.user.name=linc
+spring.security.user.password=linc
 
 spring.application.name=spring-boot-admin-server
 spring.cloud.nacos.server-addr= http://127.0.0.1:8848
